# travail-de-maturite

./: README.md  plotme.sh  run.sh  sync.sh
datacollection/: pyproject.toml
datacollection/datacollection/: __main__.py  client.py  utils.py
measurements/: balack but seat.csv  black but weird.csv  control 1 but kinda weird light on.csv  control 2 better light on.csv  control 3 lights off.csv  control 4 sunlight.csv  henryroom.csv  mirror 1 weird.csv  paulroom with strengthlowres.csv  room measurement.csv  test upstairs.csv  window.csv
models/: base.scad  base2.scad  mount.scad  plugs.scad
plotting/: pyproject.toml
plotting/plotting/: __main__.py  utils.py
raspberrypi/: pyproject.toml  run.sh  setup.sh
raspberrypi/raspberrypi/: __main__.py  datacollector.py  lidar.py  server.py  servos.py  utils.py
raspberrypi/tests/: test_servos.py
